--- a/F19/204/204F19DN.HTM
+++ b/F19/204/204F19DN.HTM
@@ -151,12 +151,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/156398471/download?download_frd=1"><!-- -->
-	  10/08<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      10/10<!-- --</a><!-- --></td>
+	  10/08<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/156536714/download?download_frd=1"><!-- -->
+      10/10<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Arithmetic in unsigned binary, signed magnitude, and ones' complement<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Correct labeling with hierarchy, Prob. 3-96, twos' oomplement, offset binary<!--end comment--></td>  
    </TR><!-- Week of 10/14------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
