Published EGR 363 PS#7

--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/26/2019 5:02 pm)
+                               >(Last update: 10/10/2019 3:45 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -83,6 +83,33 @@ PS                                                       </small>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Proakis &amp; Salehi unless otherwise noted)    </DIV></B>
 
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top"> 
+ 7
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        10/10<br>
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        10/17<br>
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!-- <a href=
+		"https://dordt.instructure.com/files/114137518/download?download_frd=1"
+		>9/12</a><br>        
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  Fourier Transform                        <br>&nbsp;
+        Read Ch 2 Sec. 2.2                             <br>&nbsp;
+		                                               <br>&nbsp;
+        <DO>Do 2.39.2, 2.39.5, 2.42</DO>               <br>&nbsp;
+		                                               <br>&nbsp;
+		<b>Hints:</b>                                  <br>&nbsp;
+		See all the hints for PS#5 below.              <br>&nbsp;
+		In Problem 2.39.6 the fundamental period is not<br>&nbsp;
+		1/<i>f</i><sub>0</sub>.  If you doubt this statement, let <i>f</i><sub>0</sub> = 60 Hz,<br>&nbsp;
+		for example, and plot the time-domain signal.  <br>&nbsp;
+		Then find the fundamental period by obsrving the <br>&nbsp;
+		plot.
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
  6
