EGR 204 published daily slides and published PS#D (PS#13)

--- a/F19/204/204F19DN.HTM
+++ b/F19/204/204F19DN.HTM
@@ -156,16 +156,16 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       10/10<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Arithmetic in unsigned binary, signed magnitude, and ones' complement<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment-->Correct labeling with hierarchy, Prob. 3-96, twos' oomplement, offset binary<!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Correct labeling with hierarchy, Prob. 3-96, twos' complement, offset binary<!--end comment--></td>  
    </TR><!-- Week of 10/14------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  10/15<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/156777134/download?download_frd=1"><!-- -->
+	  10/15<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       10/17<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Ch 4. Intro., Static storage concept, NAND-latch, D-latch, bubble notation<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 10/21------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
