--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 10/11/2019 6:09 pm)
+                                >(Last update 10/15/2019 3:45 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -100,6 +100,31 @@ PS                                                           <BR>
         Topics: Hardware description languages (HDL)   <br>&nbsp;
         Read Ch 2 Sec 2-8, 2-9                    <BR>&nbsp;
         Do  2-34<!--5-->, (more to be added)
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ D<sub>16</sub>
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        10/15
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        10/17<BR>
+        10/22
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        &nbsp; <!-- <a href=
+        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
+        title="Click to see solutions">2/01</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Static memory, NAND-, D-latches, bubbles   <br>&nbsp;
+        Read slides from <a href=
+		"https://dordt.instructure.com/files/156777134/download?download_frd=1"
+		>10/15</a>, Sec. 4-1, 4.2<BR>&nbsp;
+        <DO>Do  <a href="https://dordt.instructure.com/files/156783821/download?download_frd=1">4-70</a>, 
+		        <a href="https://dordt.instructure.com/files/156783829/download?download_frd=1">4-71</a>, 
+				<a href="https://dordt.instructure.com/files/156783817/download?download_frd=1">4-72</a></DO>      <br>&nbsp;
+		                                                   <br>&nbsp;
+		The problems can be downloaded from the links.
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  C<sub>16</sub>
