--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 10/10/2019 3:52 pm)
+                               >(Last update: 10/15/2019 6:10 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -101,15 +101,22 @@ PS                                                       </small>
         Topics:  Fourier Transform                        <br>&nbsp;
         Read Ch 2 Sec. 2.2                             <br>&nbsp;
 		                                               <br>&nbsp;
-        <DO>Do 2.39.2, 2.39.5, 2.42</DO>               <br>&nbsp;
+        <DO>Do 2.39.6, 2.43 part (b) only, 2.46.2</DO> <br>&nbsp;
 		                                               <br>&nbsp;
 		<b>Hints:</b>                                  <br>&nbsp;
 		See all the hints for PS#5 below.              <br>&nbsp;
 		In Problem 2.39.6 the fundamental period is not<br>&nbsp;
 		1/<i>f</i><sub>0</sub>.  If you doubt this statement, let <i>f</i><sub>0</sub> = 60 Hz,<br>&nbsp;
 		for example, and plot the time-domain signal.  <br>&nbsp;
-		Then find the fundamental period by obsrving the <br>&nbsp;
-		plot.
+		Then find the fundamental period by observing the <br>&nbsp;
+		plot.                                          <br>&nbsp;
+		Problem 2.46.2 can be done using tables found  <br>&nbsp;
+		in your textbook, pages 78 and 79.  Euler's    <br>&nbsp;
+		is also helpful in recognizing the result.     <br>&nbsp;
+		                                               <br>&nbsp;<small>
+		(Up to about 5:10 PM on Tu, 10/15 the list of  problems<br>&nbsp;
+		to do was erroniously the same as PS#6         </small>
+		
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
  6
@@ -159,7 +166,7 @@ PS                                                       </small>
 		single summation given in the problem statement.<br>&nbsp;
 		                                               <br>&nbsp;<small>
 		Note:  On 10/08 the due date was changed from 10/08<br>&nbsp;
-		to 10/15 to accomodate the test.              </small>  
+		to 10/15 to accommodate the test.              </small>  
 													   
 		 		
 <!-- ------------------------------------------ --></TD></TR><TR>
