EGR 204 new PS#E published, daily sildes published

--- a/F19/204/204F19DN.HTM
+++ b/F19/204/204F19DN.HTM
@@ -161,12 +161,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/156777134/download?download_frd=1"><!-- -->
-	  10/15<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      10/17<!-- --</a><!-- --></td>
+	  10/15<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/156905201/download?download_frd=1"><!-- -->
+      10/17<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Ch 4. Intro., Static storage concept, NAND-latch, D-latch, bubble notation<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Async. vs. synch., latches vs. flip-flops, D-FF details, Power-on reset <a href=
+	  "https://dordt.instructure.com/files/156905250/download?download_frd=1"
+	                                                                                                                    >*.pptx<!--end comment--></td>  
    </TR><!-- Week of 10/21------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
