--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 10/15/2019 10:53 pm)
+                                >(Last update 10/17/2019 2:11 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -100,6 +100,38 @@ PS                                                           <BR>
         Topics: Hardware description languages (HDL)   <br>&nbsp;
         Read Ch 2 Sec 2-8, 2-9                    <BR>&nbsp;
         Do  2-34<!--5-->, (more to be added)
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ E<sub>16</sub>
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        10/17
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        10/22<BR>
+        10/24
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        &nbsp; <!-- <a href=
+        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
+        title="Click to see solutions">2/01</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Async vs. sync., latch vs. FF, D-FF detail<br>&nbsp;
+        Read slides from <a href=
+		"https://dordt.instructure.com/files/156777134/download?download_frd=1"
+		>10/17</a>, Sec. 4-3, 4-9<BR>&nbsp;
+        <DO>Do 4-4.</DO>                                   <br>&nbsp;
+		                                                   <br>&nbsp;
+		Hints:  Figures 4-8 and 4-10 are relevant to this  <br>&nbsp;
+		problem.  Assume that "Initially, all storage      <br>&nbsp;
+		elements store 0." because the circuit randomly    <br>&nbsp;
+		settled to this state upon power-up.  (This is not <br>&nbsp;
+		especially likely, but the authors set the problem <br>&nbsp;
+		up this way.)  Note that the D-flip-flop in this   <br>&nbsp;
+		is positive-edge triggered whereas the flip-flop   <br>&nbsp;
+		analyzed in class was negative-edge triggered.     <br>&nbsp;
+		The rules discussed in class will need some minor  <br>&nbsp;
+		changes in order to make them work in this case.  
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  D<sub>16</sub>
