EGR 363 slides and PS#8 published

--- a/F19/363/363F19DN.HTM
+++ b/F19/363/363F19DN.HTM
@@ -161,12 +161,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/156788713/download?download_frd=1"><!-- -->
-	  10/15<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      10/17<!-- --</a><!-- --></td>
+	  10/15<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/156907383/download?download_frd=1"><!-- -->
+      10/17<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->F.T. as F.S. of periodic extension, F.T. of a pulse, of u(t), others, properties<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Mod. Thm, correlation, autocorrelation, Parseval's, convolution, Ch. 3 intro.<!--end comment--></td>  
    </TR><!-- Week of 10/21------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
