--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 10/15/2019 6:10 pm)
+                               >(Last update: 10/17/2019 2:47 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -83,6 +83,25 @@ PS                                                       </small>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Proakis &amp; Salehi unless otherwise noted)    </DIV></B>
 
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top"> 
+ 8
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        10/17<br>
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        10/24<br>
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!-- <a href=
+		"https://dordt.instructure.com/files/114137518/download?download_frd=1"
+		>9/12</a><br>        
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  Properties of Fourier Transform       <br>&nbsp;
+        Read Ch 2 Sec. 2.3                             <br>&nbsp;
+		                                               <br>&nbsp;
+        <DO>Do 2.47, 2.50, 2.51, 2.59.1</DO>		
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
  7
