--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 10/17/2019 10:12 pm)
+                                >(Last update 10/18/2019 4:06 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -169,9 +169,9 @@ PS                                                           <BR>
         10/17
         
    <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
-        &nbsp; <!-- <a href=
-        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
-        title="Click to see solutions">2/01</a><br>
+        <a href=
+        "https://dordt.instructure.com/files/156963097/download?download_frd=1"
+        title="Click to see solutions">10/22</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: twos' comp., offset binary <br>&nbsp;
         Read slides from <a href=
