Published EGR 204 PS#F (PS#15)

--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 10/18/2019 4:06 pm)
+                                >(Last update 10/22/2019 2:59 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -83,14 +83,14 @@ PS                                                           <BR>
         (In Mano &amp; Kime unless otherwise noted)    </DIV></B>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
- &nbsp;
+ F<sub>16</sub>
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        &nbsp;
+        10/22
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;<BR>
-        
+        10/24<BR>
+        10/26
         
    <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
         &nbsp; <!-- <a href=
@@ -98,8 +98,10 @@ PS                                                           <BR>
         title="Click to see solutions">2/01</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Hardware description languages (HDL)   <br>&nbsp;
-        Read Ch 2 Sec 2-8, 2-9                    <BR>&nbsp;
-        Do  2-34<!--5-->, (more to be added)
+		Finite State Machines                          <br>&nbsp;
+        Read Ch 2 Sec 2-8, 2-9, Ch 4 Sec 4.4           <BR>&nbsp;
+        <DO>Do  2-34, <a href=
+		"DDB_4_7_dDB_version.docx">4-7_dDB_version</a>.</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  E<sub>16</sub>
