--- a/F19/204/204F19DN.HTM
+++ b/F19/204/204F19DN.HTM
@@ -173,12 +173,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/157264485/download?download_frd=1"><!-- -->
-	  10/22<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      10/24<!-- --</a><!-- --></td>
+	  10/22<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/157324589/download?download_frd=1"><!-- -->
+      10/24<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Finite State Machines<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Mealy &amp; Moore, State Diagrams<!--end comment--></td>  
    </TR><!-- Week of 10/28------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
