--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 10/23/2019 3:08 pm)
+                                >(Last update 10/24/2019 2:35 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -83,6 +83,25 @@ PS                                                           <BR>
         (In Mano &amp; Kime unless otherwise noted)    </DIV></B>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
+ 16
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        10/24
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        10/29<BR>
+        11/05
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        &nbsp; <!-- <a href=
+        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
+        title="Click to see solutions">2/01</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Mealy &amp; Moore, State Diagrams      <br>&nbsp;
+        Read Ch 4 Sec 4.4           <BR>&nbsp;
+        <DO>Do  4-13, 4-14 parts a, b, c only</DO>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
  F<sub>16</sub>
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
@@ -90,7 +109,7 @@ PS                                                           <BR>
 
    <!-- Due -->             </TD><TD align="center" valign="top">
         10/24<BR>
-        10/26
+        10/29
         
    <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
         &nbsp; <!-- <a href=
