--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 10/17/2019 2:47 pm)
+                               >(Last update: 10/24/2019 8:52 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -83,6 +83,47 @@ PS                                                       </small>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Proakis &amp; Salehi unless otherwise noted)    </DIV></B>
 
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top"> 
+ 9
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        10/24<br>
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        10/31<br>
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!-- <a href=
+		"https://dordt.instructure.com/files/114137518/download?download_frd=1"
+		>9/12</a><br>        
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  Properties of Fourier Transform       <br>&nbsp;
+        Read Ch 3 Sec. 3.1, 3.2.1, 3.2.2               <br>&nbsp;
+		                                               <br>&nbsp;
+        <DO>Do 3.2, 3.3, Repeat 3.3 using DSB-LC, 3.5 </DO><br>&nbsp;
+                                                       <br>&nbsp;
+        On problem 3.3, Let <i>f<sub>0</sub></i> = 5 Hz and let <i>A<sub></sub></i> = 1 V.<br>&nbsp;		
+		Use a computer to make your plots.  It is too <br>&nbsp;
+		tedious to achive the needed plot accuracy    <br>&nbsp;
+		when plotting by hand.  Matlab,  Desmos, and  <br>&nbsp;
+		many other programs can do this task for you. <br>&nbsp;
+		Here is a hint in Matlab code that provides   <br>&nbsp;
+		one way to express the message signal <i>m</i><sub>1</sub>(<i>t</i>):<br>&nbsp;<font face="Courier New">
+		m1 = (2*t).*(u(t) - u(t - 0.5)) + ...         <br>&nbsp; &nbsp; &nbsp;
+		     (-2*t).*(u(t - 0.5) - u(t - 1.5)) + ...  <br>&nbsp; &nbsp; &nbsp;&nbsp;
+		     (2*t).*(u(t - 1.5) - u(t - 2.0))         </font><br>&nbsp;
+		When you repeat the problem for DSB-LC make   <br>&nbsp;
+		use of Equation 3.2.6 on page 127.            <br>&nbsp;
+		                                              <br>&nbsp;
+		On problem 3.5, you may make your plots by    <br>&nbsp;
+		hand, but maintain good accuracy on properly  <br>&nbsp;
+		scaled axes.  When you draw an impulse, make  <br>&nbsp;
+		the hight of the impulse represent the area   <br>&nbsp;
+		under the impulse.                            <br>&nbsp;
+		                                              <br>&nbsp;
+		Note errata on <a href="https://dfdeboer.github.io/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM#ERR_151"
+		>pages 151 and 152</a>.           
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
  8
