--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -105,7 +105,7 @@ PS                                                       </small>
                                                        <br>&nbsp;
         On problem 3.3, Let <i>f<sub>0</sub></i> = 5 Hz and let <i>A<sub></sub></i> = 1 V.<br>&nbsp;		
 		Use a computer to make your plots.  It is too <br>&nbsp;
-		tedious to achive the needed plot accuracy    <br>&nbsp;
+		tedious to achieve the needed plot accuracy   <br>&nbsp;
 		when plotting by hand.  Matlab,  Desmos, and  <br>&nbsp;
 		many other programs can do this task for you. <br>&nbsp;
 		Here is a hint in Matlab code that provides   <br>&nbsp;
@@ -119,7 +119,7 @@ PS                                                       </small>
 		On problem 3.5, you may make your plots by    <br>&nbsp;
 		hand, but maintain good accuracy on properly  <br>&nbsp;
 		scaled axes.  When you draw an impulse, make  <br>&nbsp;
-		the hight of the impulse represent the area   <br>&nbsp;
+		the height of the impulse represent the area   <br>&nbsp;
 		under the impulse.                            <br>&nbsp;
 		                                              <br>&nbsp;
 		Note errata on <a href="https://dfdeboer.github.io/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM#ERR_151"
@@ -175,7 +175,7 @@ PS                                                       </small>
 		is also helpful in recognizing the result.     <br>&nbsp;
 		                                               <br>&nbsp;<small>
 		(Up to about 5:10 PM on Tu, 10/15 the list of  problems<br>&nbsp;
-		to do was erroniously the same as PS#6         </small>
+		to do was erroneously the same as PS#6         </small>
 		
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
