EGR 363 daily slides

--- a/F19/363/363F19DN.HTM
+++ b/F19/363/363F19DN.HTM
@@ -116,7 +116,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       9/12<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Convolution:  1.)  Superposition integral,  2.) Mirror and slide.  Properties of<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment-->Reveiw complex numbers, transforms&mdash;change of perspective, dot product<!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Review complex numbers, transforms&mdash;change of perspective, dot product<!--end comment--></td>  
    </TR><!-- Week of 9/16------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
@@ -171,12 +171,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/157158235/download?download_frd=1"><!-- -->
-	  10/22<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      10/24<!-- --</a><!-- --></td>
+	  10/22<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/157343778/download?download_frd=1"><!-- -->
+      10/24<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Freq. domain perspective on AM modulation and demodulation, autotune<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->DSB-SC:  Power of Tx signal, demodulation, carrier recovery at receiver<!--end comment--></td>  
    </TR><!-- Week of 10/28------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
