EGR 204 notice on HW page of T2, also modified lab equipment list to remove some obsolete equipment.

--- a/ddb/EE_LAB/electronics_lab_page.htm
+++ b/ddb/EE_LAB/electronics_lab_page.htm
@@ -107,6 +107,7 @@ have out-of-date schematics.</small>
 <tr><td colspan="2"><hr></td></tr>
 
 <!--  E&L Fox MT-80z  Microprocessor Trainer -->
+<!--  Removed from the lab and thrown out with the trash, Summer 2017 
 <tr><td style="vertical-align: top; text-align: center;">
 <img src="E&L_Instruments/E&L_Fox_MT-80z_thumbnail.jpg" width="130" height="106">
 </td><td style="vertical-align: top; text-align: left;">
@@ -125,7 +126,7 @@ however.  Store these with their corresponding numbered
 power supply and logic probe.  (We have three slightly different 
 revisions of this kit.  The power supplies are the big difference 
 and they are not interchangeable.)</i></td></tr>
-<tr><td colspan="2"><hr></td></tr>
+<tr><td colspan="2"><hr></td></tr>  -->   
 
 <!--  EXTECH  383273 DMM -->
 <tr><td style="vertical-align: top; text-align: center;">
@@ -151,7 +152,7 @@ Digital Multimeter, 5-1/2 digits, 10 M&Omega;, 0.02% Uncertainty<br>
 With RS-232 computer interface.<br>
 <a href="Fluke/8808a___umeng0000-2.pdf"
 >User Manual</a><br><br>
-<i>One DMM per workbench with one red and one black probe. <br>
+<i>Two DMMs per workbench with one red and one black probe per DMM.
 Hang probes for storage from the patch cord rack on the pack 
 of the workbench.  Hang them from the centers of the probe cords,
 not from the ends.</i></td></tr>
@@ -190,6 +191,7 @@ to MAIN or MOD outputs. </i></td></tr>
 <tr><td colspan="2"><hr></td></tr>
 
 <!--  KEITHLEY 169 DMM -->
+<!-- Removed from the lab summer 2017.  Disposition unknown.
 <tr><td style="vertical-align: top; text-align: center;">
 <img src="keithley DMM page_files/Keithley_169.jpg" width="130" height="50">
 </td><td style="vertical-align: top; text-align: left;">
@@ -200,7 +202,7 @@ Digital Multimeter, 3-1/2 digits, 10 M&Omega;, 0.3% Uncertainty<br>
 <i>Eight of these DMM's are stored in the Storage room.  They
 may be used for projects as needed.  (There are no dedicated 
 probes for these DMM's.)</i></td></tr>
-<tr><td colspan="2"><hr></td></tr>
+<tr><td colspan="2"><hr></td></tr> -->
 
 <!--  SIMPSON 260 VOM -->
 <tr><td style="vertical-align: top; text-align: center;">
