--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 10/25/2019 10:58 am)
+                                >(Last update 10/29/2019 4:33 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -81,6 +81,27 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
         Problems Assigned        <br><DIV style="font-size: 80%">
         (In Mano &amp; Kime unless otherwise noted)    </DIV></B>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ --
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        10/29
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        ---<BR>
+        ---
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        ---
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Study for the test on Thursday, 10/31           <br>&nbsp;
+		No homework or peer grading is due on 10/31     <br>&nbsp;
+        <a href="https://dordt.instructure.com/courses/2573771#T2"
+		>Details</a> are published on Canvas regarding <br>&nbsp;
+		the material covered on the test, allowable    <br>&nbsp;
+        crip sheet, calculators, etc.		
+<!-- ------------------------------------------ --></TD></TR><TR>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  16
