EGR 204 PS#17 published

--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 10/29/2019 4:33 pm)
+                                >(Last update 10/31/2019 8:27 am)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -83,6 +83,25 @@ PS                                                           <BR>
         (In Mano &amp; Kime unless otherwise noted)    </DIV></B>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
+ 17
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        10/31
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        11/05<BR>
+        11/07
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        &nbsp; <!-- <a href=
+        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
+        title="Click to see solutions">2/01</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Mealy &amp; Moore, State Diagrams      <br>&nbsp;
+        Review Ch 4 Sec 4.4           <BR>&nbsp;
+        <DO>Do  4-15 parts a, b, c only</DO>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
  --
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
@@ -101,7 +120,6 @@ PS                                                           <BR>
 		>Details</a> are published on Canvas regarding <br>&nbsp;
 		the material covered on the test, allowable    <br>&nbsp;
         crip sheet, calculators, etc.		
-<!-- ------------------------------------------ --></TD></TR><TR>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  16
