--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 10/25/2019 7:24 pm)
+                               >(Last update: 10/31/2019 10:12 am)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -85,6 +85,25 @@ PS                                                       </small>
 
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
+10
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        10/31<br>
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        11/07<br>
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!-- <a href=
+		"https://dordt.instructure.com/files/114137518/download?download_frd=1"
+		>9/12</a><br>        
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  DSB-LC, SSB, Hilbert Transform        <br>&nbsp;
+        Read Ch 3 Sec. 3.2.2, 3.2.3, Ch 2 Sec. 2.6     <br>&nbsp;
+		                                               <br>&nbsp;
+        <DO>Do 3.11, 3.14, 2.62, 3.16</DO>           
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top"> 
  9
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
@@ -98,7 +117,7 @@ PS                                                       </small>
 		"https://dordt.instructure.com/files/114137518/download?download_frd=1"
 		>9/12</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        Topics:  Properties of Fourier Transform       <br>&nbsp;
+        Topics:  Linear Modulation, DSB-SC             <br>&nbsp;
         Read Ch 3 Sec. 3.1, 3.2.1, 3.2.2               <br>&nbsp;
 		                                               <br>&nbsp;
         <DO>Do 3.2, 3.3, Repeat 3.3 using DSB-LC, 3.5 </DO><br>&nbsp;
@@ -137,7 +156,7 @@ PS                                                       </small>
    <!-- Returned -->        </TD><TD align="center" valign="top">
         <a href=
 		"https://dordt.instructure.com/files/157392635/download?download_frd=1"
-		>10/29</a><br>        
+		>10/31</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Properties of Fourier Transform       <br>&nbsp;
         Read Ch 2 Sec. 2.3                             <br>&nbsp;
@@ -156,7 +175,7 @@ PS                                                       </small>
    <!-- Returned -->        </TD><TD align="center" valign="top">
         <a href=
 		"https://dordt.instructure.com/files/157379556/download?download_frd=1"
-		>10/29</a><br>        
+		>10/31</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Fourier Transform                        <br>&nbsp;
         Read Ch 2 Sec. 2.2                             <br>&nbsp;
@@ -190,7 +209,7 @@ PS                                                       </small>
    <!-- Returned -->        </TD><TD align="center" valign="top">
         <a href=
 		"https://dordt.instructure.com/files/157379534/download?download_frd=1"
-		>10/29</a><br>        
+		>10/31</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Fourier Series                        <br>&nbsp;
         Read Ch 2 Sec. 2.2                             <br>&nbsp;
