EGR 363 daily slides and updated PS#10 by deleting one problem from the list

--- a/F19/363/363F19DN.HTM
+++ b/F19/363/363F19DN.HTM
@@ -181,12 +181,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/157578284/download?download_frd=1"><!-- -->
-	  10/29<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      10/31<!-- --</a><!-- --></td>
+	  10/29<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/157691141/download?download_frd=1"><!-- -->
+      10/31<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->DSB-LC: Definition, power of Tx signal, demodulation<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Types of modulators, summary of DSB-SC, DSB-LC<!--end comment--></td>  
    </TR><!-- Week of 11/04------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
