--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 10/31/2019 10:12 am)
+                               >(Last update: 10/31/2019 3:03 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -101,7 +101,7 @@ PS                                                       </small>
         Topics:  DSB-LC, SSB, Hilbert Transform        <br>&nbsp;
         Read Ch 3 Sec. 3.2.2, 3.2.3, Ch 2 Sec. 2.6     <br>&nbsp;
 		                                               <br>&nbsp;
-        <DO>Do 3.11, 3.14, 2.62, 3.16</DO>           
+        <DO>Do 3.11, 3.14, 2.62</DO>           
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
  9
