Published EGR 204 PS#18

--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 10/31/2019 8:59 pm)
+                                >(Last update 11/05/2019 4:22 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -83,6 +83,29 @@ PS                                                           <BR>
         (In Mano &amp; Kime unless otherwise noted)    </DIV></B>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
+ 18
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        11/05
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        11/07<BR>
+        11/12
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        &nbsp; <!-- <a href=
+        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
+        title="Click to see solutions">2/01</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: State Machine Diagrams, One-Hot state  <br>&nbsp;
+                         &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
+		        assignments, clock speed, metastability<br>&nbsp;
+        Read Ch 4 Sec 4.5, 4.6           <BR>&nbsp;
+        <DO>Do  <a href=
+		"https://dordt.instructure.com/files/157932036/download?download_frd=1"
+		>4-73</a></DO> (Click link)
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
  17
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
@@ -97,8 +120,8 @@ PS                                                           <BR>
         "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
         title="Click to see solutions">2/01</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        Topics: Mealy &amp; Moore, State Diagrams      <br>&nbsp;
-        Review Ch 4 Sec 4.4           <BR>&nbsp;
+        Topics: Mealy &amp; Moore , State Diagrams     <br>&nbsp;
+        Review Ch 4 Sec 4.4                            <BR>&nbsp;
         <DO>Do  4-15 parts a, b, c only</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
@@ -156,7 +179,8 @@ PS                                                           <BR>
         title="Click to see solutions">11/05</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Hardware description languages (HDL)   <br>&nbsp;
-		Finite State Machines                          <br>&nbsp;
+                         &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
+		        Finite State Machines                  <br>&nbsp;
         Read Ch 2 Sec 2-8, 2-9, Ch 4 Sec 4.4           <BR>&nbsp;
         <DO>Do  2-34, <a href=
 		"DDB_4_7_dDB_version.docx">4-7_dDB_version</a>.</DO>
@@ -309,11 +333,12 @@ PS                                                           <BR>
         "https://dordt.instructure.com/files/156520975/download?download_frd=1"
         title="Click to see solutions">10/10</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        Topics: Value Fixing, Vectors (Busses),        <br>&nbsp;
-		Decoders, Encoders, Multiplexers, partitioning <br>&nbsp;
+        Topics: Value Fixing, Vectors (Busses), Decoders<br>&nbsp;
+		                 &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
+		        Encoders, Multiplexers, partitioning  <br>&nbsp;
 		Read Chapter 2, Section 2.6, 2.7,              <br>&nbsp;
         Chapter 3 Sections 3-1 through 3-6.            <BR>&nbsp;
-        <DO>Do 3-35*, 3-42*, 3-44, 3-46</DO>                   <br>&nbsp;
+        <DO>Do 3-35*, 3-42*, 3-44, 3-46</DO>           <br>&nbsp;
 		                                               <br>&nbsp;
 		Note errata on <a href=
         "../../errata/Mano_Kime/5th/MKM_5_ERR.HTM#P_127"
