Updated slide index for EGR 363

--- a/F19/363/363F19DN.HTM
+++ b/F19/363/363F19DN.HTM
@@ -195,7 +195,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       11/07<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!-- Tuesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!-- Tuesday -->&nbsp;<!--start comment--><font color=grey>Class was canceled (No slides)</font><!--end comment--><br>
       <!--Thursday -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 11/11------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
