Corrected typos on the EGR 204 slide index page

--- a/F19/204/204F19DN.HTM
+++ b/F19/204/204F19DN.HTM
@@ -183,21 +183,21 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/157578239/download?download_frd=1"><!-- -->
-	  10/29<!-- --></a><!-- --><br><!-- --><a href=
-      "https://dordt.instructure.com/files/157935606/download?download_frd=1"><!-- -->
-      10/31<!-- --></a><!-- --></td>
+	  10/29<!-- --></a><!-- --<br><!-- --<a href=
+      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
+      10/31<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->State machine design technique and example: three-bit counter<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment-->State mach. <i>design</i> diagrams, def'n of "state", redundancy, meta, one-hot<!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Test #2 (No slides)</font><!--end comment--></td>  
    </TR><!-- Week of 11/04------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  11/05<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/157935606/download?download_frd=1"><!-- -->
+	  11/05<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       11/07<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->State mach. <i>design</i> diagrams, def'n of "state", redundancy, meta, one-hot<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 11/11------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
