--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 11/05/2019 4:22 pm)
+                                >(Last update 11/06/2019 4:42 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -155,9 +155,9 @@ PS                                                           <BR>
         11/05
         
    <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
-        &nbsp; <!-- <a href=
-        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
-        title="Click to see solutions">2/01</a><br>
+        <a href=
+        "https://dordt.instructure.com/files/157998777/download?download_frd=1"
+        title="Click to see solutions">11/07</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Mealy &amp; Moore, State Diagrams      <br>&nbsp;
         Read Ch 4 Sec 4.4           <BR>&nbsp;
