Published EGR 204 PS#19

--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 11/06/2019 4:42 pm)
+                                >(Last update 11/07/2019 3:25 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -83,6 +83,39 @@ PS                                                           <BR>
         (In Mano &amp; Kime unless otherwise noted)    </DIV></B>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
+ 19
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        11/07
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        11/12<BR>
+        11/14
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        &nbsp; <!-- <a href=
+        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
+        title="Click to see solutions">2/01</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Defn of Register, Defn of <i>&mu;</i>op<br>&nbsp;
+                         &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
+		        bit-slice style schematics             <br>&nbsp;  
+        Read Ch 6 Sec 6-1, 6-2, 6-3, 6-5               <BR>&nbsp;
+        <DO>Do  6-17</DO>                              <br>&nbsp;
+		<i><u>Hint #1</u></i>: In order to, "Draw the logic diagam" you <br>&nbsp;
+		will save yourself lots of time by drawing a bit-<br>&nbsp;
+		slice and then drawing the block symbol. (Reduces<br>&nbsp;
+		the amount to draw almost by a factor of four.) <br>&nbsp;
+		<i><u>Hint #1</u></i>: A 4:1 multiplexer can be really <br>&nbsp;
+		helpful in the bit-slice.  You may draw it as   <br>&nbsp;
+		a block-entity if it is properly labeled.       <br>&nbsp;
+		<i><u>Clarifications</u></i>: The, "no change" <i>&mu;</i>op means the<br>&nbsp;
+		register should just store the present data.    <br>&nbsp;
+		The, "Complement output" <i>&mu;</i>op means that the<br>&nbsp;
+		the data stored should be replaced with the     <br>&nbsp;
+		complement of the present data stored.		
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
  18
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
@@ -100,7 +133,7 @@ PS                                                           <BR>
         Topics: State Machine Diagrams, One-Hot state  <br>&nbsp;
                          &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
 		        assignments, clock speed, metastability<br>&nbsp;
-        Read Ch 4 Sec 4.5, 4.6           <BR>&nbsp;
+        Read Ch 4 Sec 4-5, 4-6           <BR>&nbsp;
         <DO>Do  <a href=
 		"https://dordt.instructure.com/files/157932036/download?download_frd=1"
 		>4-73</a></DO> (Click link)
@@ -121,7 +154,7 @@ PS                                                           <BR>
         title="Click to see solutions">2/01</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Mealy &amp; Moore , State Diagrams     <br>&nbsp;
-        Review Ch 4 Sec 4.4                            <BR>&nbsp;
+        Review Ch 4 Sec 4-4                            <BR>&nbsp;
         <DO>Do  4-15 parts a, b, c only</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
@@ -160,7 +193,7 @@ PS                                                           <BR>
         title="Click to see solutions">11/07</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Mealy &amp; Moore, State Diagrams      <br>&nbsp;
-        Read Ch 4 Sec 4.4           <BR>&nbsp;
+        Read Ch 4 Sec 4-4           <BR>&nbsp;
         <DO>Do  4-13, 4-14 parts a, b, c only</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
