Published EGR 204 daily slides

--- a/F19/204/204F19DN.HTM
+++ b/F19/204/204F19DN.HTM
@@ -193,12 +193,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/157935606/download?download_frd=1"><!-- -->
-	  11/05<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      11/07<!-- --</a><!-- --></td>
+	  11/05<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/158060658/download?download_frd=1"><!-- -->
+      11/07<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->State mach. <i>design</i> diagrams, def'n of "state", redundancy, meta, one-hot<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Ch 6, Defn of Register, Defn of microoperation, bit-slice style schematics<!--end comment--></td>  
    </TR><!-- Week of 11/11------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
