EGR 363 slides for today and updated HW page to show no assignment this week.

--- a/F19/363/363F19DN.HTM
+++ b/F19/363/363F19DN.HTM
@@ -191,12 +191,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  11/05<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      11/07<!-- --</a><!-- --></td>
+	  11/05<!-- --</a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/158072452/download?download_frd=1"><!-- -->
+      11/07<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!-- Tuesday -->&nbsp;<!--start comment--><font color=grey>Class was canceled (No slides)</font><!--end comment--><br>
-      <!--Thursday -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Thursday -->&nbsp;<!--start comment-->QAM, trends in engineering, freedom, grace, &amp; modal aspects (standards)<!--end comment--></td>  
    </TR><!-- Week of 11/11------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
